<resources>
  <string name="app_name">Quarantine circle</string>
  <string name="Cancel">Cancel</string>
  <string name="stay_home_stay_safe">stay home stay safe</string>
  <string name="_500m">500M</string>
  <string name="selected_location">Selected location</string>
  <string name="km">KM</string>
  <string name="m">M</string>
  <string name="linkedin_icon" translatable="false">LinkedIn icon</string>
  <string name="gal_reshef">Gal Reshef</string>
  <string name="none" translatable="false" />
  <string name="more_of_my_apps_on" translatable="false">More of my apps on</string>
  <string name="google_play" translatable="false">Google™ Play</string>
  <string name="github_icon" translatable="false">Github icon</string>
  <string name="created_by" translatable="false">Created by</string>
  <string name="away_from_quarantine_circle">away from quarantine circle</string>
  <string name="you_are">You are</string>
  <string name="good_job">Good job!</string>
  <string name="search">Search or select on map</string>
  <string name="set_new_home">Set New home</string>
  <string name="click_marker_to_set">Click here to set</string>
  <string name="style_json" translatable="false">
  [
    {
      \"featureType\": \"all\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#242f3e\"
        }
      ]
    },
    {
      \"featureType\": \"all\",
      \"elementType\": \"labels.text.stroke\",
      \"stylers\": [
        {
          \"lightness\": -80
        }
      ]
    },
    {
      \"featureType\": \"administrative\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#746855\"
        }
      ]
    },
    {
      \"featureType\": \"administrative.locality\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#d59563\"
        }
      ]
    },
    {
      \"featureType\": \"poi\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#d59563\"
        }
      ]
    },
    {
      \"featureType\": \"poi.park\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#263c3f\"
        }
      ]
    },
    {
      \"featureType\": \"poi.park\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#6b9a76\"
        }
      ]
    },
    {
      \"featureType\": \"road\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#2b3544\"
        }
      ]
    },
    {
      \"featureType\": \"road\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#9ca5b3\"
        }
      ]
    },
    {
      \"featureType\": \"road.arterial\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#38414e\"
        }
      ]
    },
    {
      \"featureType\": \"road.arterial\",
      \"elementType\": \"geometry.stroke\",
      \"stylers\": [
        {
          \"color\": \"#212a37\"
        }
      ]
    },
    {
      \"featureType\": \"road.highway\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#746855\"
        }
      ]
    },
    {
      \"featureType\": \"road.highway\",
      \"elementType\": \"geometry.stroke\",
      \"stylers\": [
        {
          \"color\": \"#1f2835\"
        }
      ]
    },
    {
      \"featureType\": \"road.highway\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#f3d19c\"
        }
      ]
    },
    {
      \"featureType\": \"road.local\",
      \"elementType\": \"geometry.fill\",
      \"stylers\": [
        {
          \"color\": \"#38414e\"
        }
      ]
    },
    {
      \"featureType\": \"road.local\",
      \"elementType\": \"geometry.stroke\",
      \"stylers\": [
        {
          \"color\": \"#212a37\"
        }
      ]
    },
    {
      \"featureType\": \"transit\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#2f3948\"
        }
      ]
    },
    {
      \"featureType\": \"transit.station\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#d59563\"
        }
      ]
    },
    {
      \"featureType\": \"water\",
      \"elementType\": \"geometry\",
      \"stylers\": [
        {
          \"color\": \"#17263c\"
        }
      ]
    },
    {
      \"featureType\": \"water\",
      \"elementType\": \"labels.text.fill\",
      \"stylers\": [
        {
          \"color\": \"#515c6d\"
        }
      ]
    },
    {
      \"featureType\": \"water\",
      \"elementType\": \"labels.text.stroke\",
      \"stylers\": [
        {
          \"lightness\": -20
        }
      ]
    }
  ]
 </string>
  <string name="developer_logo" translatable="false">Developer Logo</string>
  <string name="covid_icon" translatable="false">Covid icon</string>
  <string name="these_days_with_covid_19">These days with Covid-19 We can\'t know what happens tomorrow That is why I created this app With it you can easily check how far away from home you can travel</string>
  <string name="you_are_within_the_quarantine">You are within the quarantine circle</string>
  <string name="please_go_back">Please go back!</string>
  <string name="meters">meters</string>
  <string name="add_distance">Add distance</string>
  <string name="subtract_distance">Subtract distance</string>
  <string name="distance_allowed">Distance allowed</string>
</resources>