<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?android:attr/colorBackground"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp">

                <TextView
                    android:id="@+id/etGameType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/quicksand"
                    android:gravity="center|center_vertical"
                    android:text="@string/these_days_with_covid_19"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etGameType" />


                <TextView
                    android:id="@+id/tvCreators"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand"
                    android:text="@string/gal_reshef"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <ImageView
                    android:id="@+id/ivLinkedGal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/linkedin_icon"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintStart_toEndOf="@+id/ivGithub"
                    app:layout_constraintTop_toBottomOf="@+id/tvCreators"
                    app:srcCompat="@drawable/linkedin_icon" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayoutPlayStore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivLinkedGal">

                    <ImageView
                        android:id="@+id/ivPlayIcon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/none"
                        android:src="@drawable/play_icon_256"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:text="@string/more_of_my_apps_on"
                        app:layout_constraintStart_toEndOf="@+id/ivPlayIcon"
                        app:layout_constraintTop_toTopOf="@+id/ivPlayIcon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:text="@string/google_play"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="@+id/ivPlayIcon"
                        app:layout_constraintStart_toEndOf="@+id/ivPlayIcon" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/ivGithub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/github_icon"
                    android:src="@drawable/vector_github"
                    app:layout_constraintBottom_toBottomOf="@+id/ivLinkedGal"
                    app:layout_constraintEnd_toStartOf="@+id/ivLinkedGal"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/ivLinkedGal" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:text="@string/created_by"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end|top"
        android:contentDescription="@string/Cancel"
        app:srcCompat="@drawable/red_close" />
</FrameLayout>