<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tile_settings"
    android:gravity="center"
    app:layoutDescription="@xml/splash_scene">

    <TextView
        android:id="@+id/tvStaysafe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand"
        android:gravity="center_horizontal"
        android:text="@string/stay_home_stay_safe"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCovid5" />

    <ImageView
        android:id="@+id/ivDeveloperLogo"
        android:layout_width="120dp"
        android:layout_height="36dp"
        android:layout_margin="10dp"
        android:alpha="0.5"
        android:contentDescription="@string/developer_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/galos_logo" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rambla"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivCovid0"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="104dp"
        android:contentDescription="@string/covid_icon"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCovid3"
        app:srcCompat="@drawable/covid" />

    <ImageView
        android:id="@+id/ivCovid1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/covid_icon"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/covid" />

    <ImageView
        android:id="@+id/ivCovid2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/covid_icon"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCovid0"
        app:srcCompat="@drawable/covid" />

    <ImageView
        android:id="@+id/ivCovid3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/covid_icon"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/covid" />

    <ImageView
        android:id="@+id/ivCovid4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/covid_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/covid" />

    <ImageView
        android:id="@+id/ivCovid5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:alpha="0"
        android:contentDescription="@string/covid_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/covid" />


</androidx.constraintlayout.motion.widget.MotionLayout>